# fp-workshops

./: README.md  fp-workshops.cabal  stack.yaml
src/: Main.hs  WorkshopOne.hs
src/WorkshopOne/: Expr.hs  WarmUp.hs
